# allianceauth-fat-paybacks

./: CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
fatpaybacks/: __init__.py  admin.py  apps.py  auth_hooks.py  models.py  tasks.py
fatpaybacks/migrations/: 0001_initial.py  0002_fatpaybackrecord.py  0003_fatpaybackrecord_isk_per_active_and_more.py
